--- a/wwr/about.html
+++ b/wwr/about.html
@@ -21,29 +21,44 @@
       <div class="hero">
         <img src="images/rafting26_600.jpg" alt="">
         <h1>Payeeo company</h1>
+      </div>
         <article>
           <img src="images/rafting47_600.jpg" alt="">
-          <p>Our mission is to provide a good working environment for both our clients and out emplyoees as we grow togerther in unity for our community not only the professional part 
-            but our company wants to provide compfort to all who seek it.</p>
-        </div>
+          <p>Our mission is to provide a good working environment for both our clients and out emplyoees as we grow togerther in unity for our community not only the 
+            professional part but our company wants to provide compfort to all who seek it.</p>
         </article>
         <section>
-          <h2>History</h2>
+          <h2>"History"</h2>
           <p>It all started in 1880 by my grandfather who was the original owner and it passed all the way to me , which was a bit expected after I graduted from my school university of business and breif about it, the company started with only 10 members on which my grandpa was the founder and now the company is running with more than 300 members 
             and increasing massivly each year which shows positive growth.</p>
         </section>
         <section>
           <h2>"Adventure Awaits You!"</h2>
+          <figure>
            <img src="images/red-wall.jpg" alt="">
+           <figcaption>River</figcaption>
+          </figure>
+          <figure>
            <img src="images/salmon-boats.jpg" alt="">
+           <figcaption>mountains</figcaption>
+          </figure>
+          <figure>
            <img src="images/salmon-cabins.jpg" alt="">
+           <figcaption>Cabine</figcaption>
+          </figure>
+          <figure>
            <img src="images/bighorn-ram.jpg" alt="">
+           <figcaption>a ram</figcaption>
+          </figure>
+          <figure>
            <img src="images/hermit1.jpg" alt="">
+           <figcaption>River flow</figcaption>
+          </figure>
         </section>
     </main>
     <foooter>
       <p>©2024 ✨Payeeo✨ Madut Bol</p>
-      <nav class="socialmedia">
+      <nav class="social-media">
         <a href="">
           <img src="images/2111463.png" alt="facebook">
         </a>
