--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Payeeo company - About us</title>
+    <meta name ="rafting-site" content="#">
+    <meta name="Madut" content="#">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
@@ -56,7 +58,7 @@
           </figure>
         </section>
     </main>
-    <foooter>
+    <footer>
       <p>©2024 ✨Payeeo✨ Madut Bol</p>
       <nav class="social-media">
         <a href="">
@@ -69,7 +71,7 @@
           <img src="images/9862814.png" alt="twitter X">
         </a>
       </nav>
-    </foooter>
+    </footer>
     
 </body>
 </html>
