--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,7 +13,7 @@
       <img src="images/brownrafting.jpeg" alt="rafting_logo">
       <nav>
         <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
+        <a href="site-plan-rafting.html">Site Plan</a>
         <a href="trips.html">Trips</a>
         <a href="contact.html">Contact Us</a>
     </nav>
