--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -14,10 +14,10 @@
     <header>
         <img src="images/brownrafting.jpeg" alt="rafting_logo">
         <nav>
-          <a href="index.html">Home</a>
-          <a href="about.html">About Us</a>
-          <a href="trips.html">Trips</a>
-          <a href="contact.html">Contact Us</a>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="trips.html">Trips</a>
+            <a href="site-plan-rafting.html">Site Plan</a>
       </nav>
     </header>
 
@@ -45,7 +45,7 @@
 
                 <section>
                     <h1 >phone number(s):</h1>
-                    <figcaption>137543434</figcaption>
+                    <figcaption>+201117851927</figcaption>
 
                 </section>
 
