--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,17 +6,19 @@
     <title>Payeeo company - About us</title>
     <meta name ="rafting-site" content="#">
     <meta name="Madut" content="#">
+    <meta name ="description" content="About us page">
     <link rel="stylesheet" href="styles/rafting.css">
+    <link rel="fonts" href="google.com/fonts">
 </head>
 <body>
     <header>
       <img src="images/brownrafting.jpeg" alt="rafting_logo">
       <nav>
         <a href="index.html">Home</a>
-        <a href="site-plan-rafting.html">Site Plan</a>
+        <a href="about.html">About Us</a>
         <a href="trips.html">Trips</a>
         <a href="contact.html">Contact Us</a>
-    </nav>
+      </nav>
 
     </header>
     <main>
@@ -26,13 +28,11 @@
       </div>
         <article>
           <img src="images/rafting47_600.jpg" alt="">
-          <p>Our mission is to provide a good working environment for both our clients and out emplyoees as we grow togerther in unity for our community not only the 
-            professional part but our company wants to provide compfort to all who seek it.</p>
+          <p>Our mission is to provide a good working environment for both our clients and Our employees as we grow together in unity for our community not only the professional part but our company wants to provide comfort to all who seek it.</p>
         </article>
         <section>
           <h2>"History"</h2>
-          <p>It all started in 1880 by my grandfather who was the original owner and it passed all the way to me , which was a bit expected after I graduted from my school university of business and breif about it, the company started with only 10 members on which my grandpa was the founder and now the company is running with more than 300 members 
-            and increasing massivly each year which shows positive growth.</p>
+          <p>It all started in 1880 by my grandfather who was the original owner and it passed all the way to me , which was a bit expected after I graduated from my school university of business and brief about it, the company started with only 10 members on which my grandpa was the founder and now the company is running with more than 300 members and increasing massively each year which shows positive growth.</p>
         </section>
         <section>
           <h2>"Adventure Awaits You!"</h2>
@@ -46,7 +46,7 @@
           </figure>
           <figure>
            <img src="images/salmon-cabins.jpg" alt="">
-           <figcaption>Cabine</figcaption>
+           <figcaption>Cabin</figcaption>
           </figure>
           <figure>
            <img src="images/bighorn-ram.jpg" alt="">
@@ -61,13 +61,13 @@
     <footer>
       <p>©2024 ✨Payeeo✨ Madut Bol</p>
       <nav class="social-media">
-        <a href="">
+        <a href="https://www.facebook.com">
           <img src="images/2111463.png" alt="facebook">
         </a>
-        <a href="">
+        <a href="https://t.me">
           <img src="images/2504941.png" alt="telegram">
         </a>
-        <a href="">
+        <a href="https://twitter.com">
           <img src="images/9862814.png" alt="twitter X">
         </a>
       </nav>
