--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -14,11 +14,11 @@
     <header>
         <img src="images/brownrafting.jpeg" alt="rafting_logo">
         <nav>
-            <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
             <a href="site-plan-rafting.html">Site Plan</a>
-      </nav>
+            <a href="contact.html">Contact Us</a>
+        </nav>
     </header>
 
       
