--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -12,8 +12,8 @@
     <header>
       <img src="images/brownrafting.jpeg" alt="rafting_logo">
       <nav>
-        <a href="abouts.html">Home</a>
         <a href="about.html">About Us</a>
+        <a href="trips.html">Trips</a>
         <a href="site-plan-rafting.html">Site Plan</a>
         <a href="contact.html">Contact Us</a>
     </nav>
